Fix too many buttons overflowing main box

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,14 +36,29 @@
   text-decoration: none;
 }
 
-.mainBox {
+.mainBoxWrapper {
   height: 65.2svh;
-  background-color: #333d47;
   width: 80.2vw;
   margin-bottom: 1.9em;
+  position: relative;
+}
+
+.zoomOverlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 9;
+  pointer-events: none;
+}
+
+.mainBox {
+  height: 100%;
+  width: 100%;
+  background-color: #333d47;
   border-radius: 1.2em;
   box-shadow: 0 0 .5em #00000088 inset;
   position: relative;
+  overflow-y: scroll;
 }
 
 .buttonWrapper {
@@ -205,6 +220,7 @@
   line-height: .9em;
   color: #69737e;
   overflow: hidden;
+  pointer-events: all;
 }
 
 .zoomButton {
@@ -265,7 +281,7 @@
 
 /* mobile */
 @media (max-aspect-ratio: 1) {
-  .mainBox {
+  .mainBoxWrapper {
     height: 80svh;
     font-size: 2.4vw;
   }
